# rust-api-seconde

./: .env.example  API_DOCUMENTATION.md  Cargo.toml  README.md  run.sh
src/: main.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  person_controller.rs  video_controller.rs
src/database/: connection.rs  migration.rs  mod.rs
src/dto/: mod.rs  person_dto.rs  user_dto.rs  video_dto.rs
src/mappers/: mod.rs  person_mapper.rs  user_mapper.rs  video_mapper.rs
src/middleware/: auth.rs  basic_auth.rs  mod.rs
src/models/: mod.rs  person.rs  user.rs  video.rs
src/repositories/: mod.rs  person_repository.rs  user_repository.rs  video_repository.rs
src/routes/: mod.rs
src/services/: auth_service.rs  mod.rs  person_service.rs  video_service.rs
src/utils/: errors.rs  jwt.rs  mod.rs
