[package]
name = "rust-rest-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
actix-web-httpauth = "0.8"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
